--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-COLORS:
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-*/
-
 * {
     margin: 0px;
     padding: 0px;
@@ -49,20 +42,91 @@ body {
     left: 50%;
     top: 40%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    backface-visibility: hidden;
 }
 .heading-primary-main {
     display: block;
     font-size: 60px;
     font-weight: 400;
-    letter-spacing: 60px;
+    letter-spacing: 35px;
+
+    animation: moveInLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
 }
 .heading-primary-sub {
     display: block;
     font-size: 24px;
     font-weight: 700;
-    letter-spacing: 8.7px;
+    letter-spacing: 8px;
+    
+    animation: moveInRight 2s ease-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    50% {
+        transform: translateX(75px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(200px);
+    }
+    50% {
+        transform: translateX(-75px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 40px;
+    border-radius: 100px;
+    transition: all .2s;
+}
+.btn-white {
+    background-color: #fff;
+    color: rgba(0, 0, 0, 0.8);
+}
+.btn:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
+}
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+.btn-animated {
+    animation: fadeIn 5s ease-out 2s;
+    animation-fill-mode: backwards;
+}
+.mb-50{
+    margin-bottom: 50px;
 }
