--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
-* {
+*,
+*::after,
+*::before {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+html {
+    /* calculation for 1 rem: browser default is 16px,  we want 1 rem = 10px. Hence : (10/16)*100 = 62.5% */
+    /* font-size: 10px; */
+    font-size: 62.5%;
 }
 body {
     font-family: "Latto", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
+    box-sizing: border-box;
 }
 .header {
     height: 95vh;
@@ -29,15 +37,15 @@ body {
     /* clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%); */
     /* clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%); */
 }
-.logo-box {
+.header__logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
-.logo {
-    height: 35px;
+.header__logo {
+    height: 3.5rem;
 }
-.heading-box {
+.header__text-box {
     position: absolute;
     left: 50%;
     top: 40%;
@@ -49,21 +57,21 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
 }
-.heading-primary-main {
+.heading-primary--main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation: moveInLeft;
     animation-duration: 2s;
     animation-timing-function: ease-out;
 }
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
-    font-size: 24px;
+    font-size: 2.4rem;
     font-weight: 700;
-    letter-spacing: 8px;
+    letter-spacing: .8rem;
     
     animation: moveInRight 2s ease-out;
 }
@@ -71,27 +79,27 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-200px);
+        transform: translateX(-20rem);
     }
     50% {
-        transform: translateX(75px);
+        transform: translateX(7.5rem);
     }
     100% {
         opacity: 1;
-        transform: translateX(0px);
+        transform: translateX(0);
     }
 }
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(200px);
+        transform: translateX(20rem);
     }
     50% {
-        transform: translateX(-75px);
+        transform: translateX(-7.5rem);
     }
     100% {
         opacity: 1;
-        transform: translateX(0px);
+        transform: translateX(0);
     }
 }
 @keyframes fadeIn {
@@ -107,26 +115,26 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
-    padding: 15px 40px;
-    border-radius: 100px;
+    padding: 1.5rem 4rem;
+    border-radius: 10rem;
     transition: all .2s;
 }
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: rgba(0, 0, 0, 0.8);
 }
 .btn:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
+    transform: translateY(-.4rem);
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
 }
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.5);
 }
-.btn-animated {
+.btn--animated {
     animation: fadeIn 5s ease-out 2s;
     animation-fill-mode: backwards;
 }
 .mb-50{
-    margin-bottom: 50px;
+    margin-bottom: 5rem;
 }
