section account page with animations and pics

--- a/sass/abstractions/_variables.scss
+++ b/sass/abstractions/_variables.scss
@@ -4,6 +4,7 @@ $color-secondary: #000000;
 $color-white: #ffffff;
 $color-grey: #777777;
 
+$color-light-grey-1 : #f7f7f7;
 
 // Grid
 $grid-width: 114rem;
