--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,11 @@
+body {
+    font-family: "Latto", sans-serif;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.7;
+    color: $color-grey;
+    padding: 3rem;
+}
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
@@ -22,12 +30,33 @@
         animation: moveInRight 2s ease-out;
     }
 }
+.header-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    display: inline-block;
+    background-image: linear-gradient( to right, $color-primary, $color-secondary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all;
 
-body {
-    font-family: "Latto", sans-serif;
-    font-weight: 400;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 5rem 2rem rgba($color-secondary, .3);
+    }
+}
+.heading-tertiary {
     font-size: 1.6rem;
-    line-height: 1.7;
-    color: $color-grey;
-    padding: 3rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.para-text {
+    font-size: 1.6rem;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
 }
