--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,28 @@
+.mb-10{
+    margin-bottom: 1rem;
+}
+.mb-20{
+    margin-bottom: 2rem;
+}
+.mb-30{
+    margin-bottom: 3rem;
+}
+.mb-40{
+    margin-bottom: 4rem;
+}
 .mb-50{
     margin-bottom: 5rem;
+}
+.mb-60{
+    margin-bottom: 6rem;
+}
+.mb-70{
+    margin-bottom: 7rem;
+}
+.mb-80{
+    margin-bottom: 8rem;
+}
+
+.centered-text {
+    text-align: center;
 }
