--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,14 @@ html {
 body {
   box-sizing: border-box; }
 
+body {
+  font-family: "Latto", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777777;
+  padding: 3rem; }
+
 .heading-primary {
   color: #ffffff;
   text-transform: uppercase;
@@ -58,16 +66,57 @@ body {
     letter-spacing: .8rem;
     animation: moveInRight 2s ease-out; }
 
-body {
-  font-family: "Latto", sans-serif;
-  font-weight: 400;
+.header-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  background-image: linear-gradient(to right, #d60000, #000000);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all; }
+  .header-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 5rem 2rem rgba(0, 0, 0, 0.3); }
+
+.heading-tertiary {
   font-size: 1.6rem;
-  line-height: 1.7;
-  color: #777777;
-  padding: 3rem; }
+  text-transform: uppercase;
+  font-weight: 500; }
+
+.para-text {
+  font-size: 1.6rem; }
+  .para-text:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.mb-10 {
+  margin-bottom: 1rem; }
+
+.mb-20 {
+  margin-bottom: 2rem; }
+
+.mb-30 {
+  margin-bottom: 3rem; }
+
+.mb-40 {
+  margin-bottom: 4rem; }
 
 .mb-50 {
   margin-bottom: 5rem; }
+
+.mb-60 {
+  margin-bottom: 6rem; }
+
+.mb-70 {
+  margin-bottom: 7rem; }
+
+.mb-80 {
+  margin-bottom: 8rem; }
+
+.centered-text {
+  text-align: center; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -93,6 +142,54 @@ body {
   animation: fadeIn 5s ease-out 2s;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #d60000;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 1rem;
+  border-bottom: 1px solid #d60000;
+  padding: 1rem 3rem;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #d60000;
+  color: #ffffff;
+  transform: translateY(-0.4rem);
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5); }
+
+.btn-text:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
+
+.pictures {
+  position: relative; }
+  .pictures__pic {
+    width: 50%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .pictures__pic--p1 {
+      left: 0;
+      top: -2rem; }
+    .pictures__pic--p2 {
+      right: 5rem;
+      top: 2rem; }
+    .pictures__pic--p3 {
+      left: 20%;
+      top: 10rem; }
+    .pictures__pic:hover {
+      outline: 1.5rem solid #d60000;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .pictures:hover .pictures__pic:not(:hover) {
+    transform: scale(0.9); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(214, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/hero.jpg);
@@ -115,7 +212,6 @@ body {
 
 .row {
   max-width: 114rem;
-  background-color: cyan;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -124,7 +220,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
@@ -140,3 +235,7 @@ body {
     width: calc(2 * ((100% - 3*6rem) /4) + 6rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3*6rem) /4) + 2*6rem); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0; }
