--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,3 +25,27 @@
         animation-fill-mode: backwards;
     }
 }
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: 1.6rem;
+        color: $color-primary;
+        text-transform: uppercase;
+        text-decoration: none;
+        display: inline-block;
+        border-radius: 1rem;
+        border-bottom: 1px solid $color-primary;
+        padding: 1rem 3rem;
+        transition: all .2s;
+    }
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+        transform: translateY(-.4rem);
+        box-shadow: 0 2rem 3rem rgba($color-secondary, 0.5);
+    }
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-secondary, 0.5);
+    }
+}
