--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/pictures";
 @import "layouts/header";
 @import "layouts/grid";
 @import "pages/home";
