section-passtime with cards

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,25 @@ body {
   .pictures:hover .pictures__pic:not(:hover) {
     transform: scale(0.9); }
 
+.passtime-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: all .3s; }
+  .passtime-box__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #d60000, #000000);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent; }
+  .passtime-box:hover {
+    transform: translateY(-1.5rem) scale(1.04); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(214, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/hero.jpg);
@@ -239,3 +258,12 @@ body {
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0; }
+
+.section-passtime {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(214, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-passtime > * {
+    transform: skewY(7deg); }
