--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 
 @import "components/button";
 @import "components/pictures";
+@import "components/passtime";
+
 @import "layouts/header";
 @import "layouts/grid";
 @import "pages/home";
