--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,3 +2,18 @@
     background-color: $color-light-grey-1;
     padding: 25rem 0;
 }
+.section-passtime {
+    padding: 20rem 0;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary, 0.8),
+        rgba($color-secondary, 0.8)), 
+        url(../img/nat-4.jpg);
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -10rem;
+
+    & > * {
+        transform: skewY(7deg);
+    }
+}
